--- a/src/components/Body/index.css
+++ b/src/components/Body/index.css
@@ -1,1 +1,36 @@
 /* Write your CSS here */
+
+.body-background {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-height: 40vh;
+}
+.left-navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e2e8f0;
+  flex-grow: 1;
+  max-width: 300px;
+}
+.content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: #f1f5f9;
+  align-items: center;
+}
+.right-navbar {
+  background-color: #e2e8f0;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  max-width: 300px;
+  align-items: center;
+}
+
+li {
+  list-style-type: none;
+  color: #64748b;
+}
