--- a/src/components/ConfigurationController/index.css
+++ b/src/components/ConfigurationController/index.css
@@ -1,1 +1,20 @@
 /* Write your CSS here */
+.config-control-background {
+  display: flex;
+  flex-direction: column;
+  padding-left: 45px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  background-color: #475569;
+  height: 200px;
+}
+label {
+  margin-left: 10px;
+  color: white;
+  font-family: roboto;
+  margin-top: 15px;
+}
+.heading-style {
+  color: white;
+  font-family: roboto;
+}
