--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,1 +1,12 @@
 /* Write your CSS here */
+.header-background {
+  background-color: #cbd5e1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.header-heading {
+  color: #475569;
+  font-family: roboto;
+}
